# sts-deeppocket-budgetting

./: .gitignore  CLAUDE.md  README.md  TODO.md
.claude/skills/verify/: SKILL.md
backend/: pyproject.toml  requirements.txt  seed.py
backend/app/: config.py  constants.py  db.py  main.py  models.py  schemas.py
backend/app/routers/: accounts.py  admin.py  budget.py  categories.py  contributions.py  data.py  imports.py  people.py  room.py  rules.py  snapshots.py  transactions.py
backend/app/services/: categorize.py  cesg.py  csv_import.py  deletion.py  fixtures.py  transactions_csv.py
backend/tests/: conftest.py  test_admin.py  test_admin_purge.py  test_budget.py  test_categories.py  test_categorize.py  test_cesg.py  test_constants.py  test_contributions.py  test_csv_import.py  test_data_endpoint.py  test_fixtures_payload.py  test_people_accounts.py  test_room.py  test_rules.py  test_seed.py  test_seed_banking.py  test_snapshots.py  test_transactions_bulk.py  test_transactions_csv.py  test_transactions_csv_mapped.py  test_transactions_manual.py  test_transactions_patch.py
docs/guide/: USER_GUIDE.md  build-html-artifact.mjs  generate-screenshots.mjs  sample.csv
docs/superpowers/plans/: 2026-06-29-m2-backend-editable-investments.md  (+2 more)
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/data/: api.ts  (+1 more)
mock/: generate.py
scratchpad/01_cc_initial_mock_build/: README.md  design.md  implementation.md  plan.md  requirements.md  run_and_test.md  task_list.md
(+50 files in other folders)
