[project]
name = "deeppocket-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "sqlmodel==0.0.22",
    "python-multipart==0.0.20",
]

[dependency-groups]
dev = [
    "pytest==8.3.4",
    "httpx==0.28.1",
]

[tool.uv]
package = false
